GET-619: fixing visibility of always-shown float labels
- Issue caused by commit: 47258b363090e9ccd2c9b507cac94ccb4f876984 [47258b3] - making float labels hidden in addition to 0 opacity, so they aren't interactive until visible.

--- a/dashboard/src/core/styles/modules/form.scss
+++ b/dashboard/src/core/styles/modules/form.scss
@@ -251,6 +251,7 @@ input[type=number] {
 .form__label--shown { // doesn't float the label when the input has value
   @extend .form__label;
 
+  visibility: visible;
   opacity: 1;
   position: absolute;
   top: .75em;
